# pypitest

./: .gitignore  flake.nix  pyproject.toml
.github/workflows/: publish.yml
pypitest/: main.py
